# byte-pair-encoding-tokenizer

./: README.md  pyproject.toml
data/: python-code-sample.txt  wikipedia-en-sample.txt  wikipedia-fr-sample.txt
data/conversation/: conversation.json
docs/: ARCHITECTURE.md  PROJECT_OVERVIEW.md  VISUALIZER.md
src/: basic-usage.py  bpe_visualizer.py  tokenizer.py  visualizer.py
src/bpe/: __init__.py  tokenizer.py
