[project]
name = "bpe-tokenizer"
version = "1.0.0"
description = "Byte Pair Encoding tokenizer implementation from scratch"
requires-python = ">=3.8"
dependencies = [
    "regex"
]

[project.optional-dependencies]
viz = ["streamlit"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"